<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sync Cloud</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_server">Server</string>
    <string name="server_name_hint">Server Name</string>
    <string name="server_ip_hint">IP like:192.168.0.1</string>
    <string name="server_port_hint">Port default:9000</string>
    <string name="server_allow_delete">Allow to delete server files</string>
    <string name="client_allow_delete">Allow to delete client\'s files</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Confirm to delete the server?</string>
	<string name="offline">offline</string>
	<string name="online">online</string>
	<string name="sync">sync...</string>
	<string name="connect">connect...</string>
	<string name="last_sync_time_never">not sync ever</string>
	<string name="last_sync_time_just">sync just now</string>
	<string name="last_sync_time_min">sync %1$s min ago</string>
	<string name="last_sync_time_hour">sync %1$s hr ago</string>
	<string name="last_sync_time_day">sync %1$s days ago</string>
</resources>
