<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ServerActivity$DummySectionFragment"
    android:orientation="vertical">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/serverNameEditor"
            android:layout_gravity="center_horizontal|top"
            android:hint="@string/server_name_hint"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/serverIPEditor"
            android:layout_gravity="right|center_vertical"
            android:hint="@string/server_ip_hint"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/serverPortEditor"
            android:layout_gravity="center"
            android:text="9000"
            android:hint="@string/server_port_hint"/>

    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_allow_delete"
            android:id="@+id/checkBox"
            android:checked="true"
            android:visibility="gone"/>

    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_allow_delete"
            android:id="@+id/serverAllowChk"
            android:layout_gravity="center"
            android:checked="true"
            android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

    </LinearLayout>

</LinearLayout>
